feat(flow): implement loading and saving

--- a/package.json
+++ b/package.json
@@ -22,6 +22,14 @@
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@ngrx/effects": "^11.1.0",
+    "@ngrx/store": "^11.1.0",
+    "@types/expr-eval": "^1.1.0",
+    "@types/lodash-es": "^4.17.4",
+    "expr-eval": "^2.0.2",
+    "immer": "^9.0.1",
+    "lodash-es": "^4.17.21",
+    "ngrx": "0.0.1-security",
     "regenerator-runtime": "^0.13.7",
     "rete": "^1.4.5-rc.1",
     "rete-angular-render-plugin": "^0.2.2",
