--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store": "^11.1.0",
     "@types/expr-eval": "^1.1.0",
     "@types/lodash-es": "^4.17.4",
+    "date-fns": "^2.21.1",
     "expr-eval": "^2.0.2",
     "immer": "^9.0.1",
     "lodash-es": "^4.17.21",
@@ -47,6 +48,7 @@
     "@angular-devkit/build-angular": "~0.1102.8",
     "@angular/cli": "~11.2.8",
     "@angular/compiler-cli": "~11.2.9",
+    "@types/date-fns": "^2.6.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@types/pupa": "^2.0.0",
