--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expr-eval": "^2.0.2",
     "immer": "^9.0.1",
     "lodash-es": "^4.17.21",
+    "ng-qrcode": "^4.2.0",
     "ngrx": "0.0.1-security",
     "pupa": "^2.1.1",
     "regenerator-runtime": "^0.13.7",
